<resources>
    <string name="app_name">Restaurantapp</string>
    <string name="choose">Escolher</string>
    <string name="table_title">Mesa:</string>
    <string name="add_product">Adicionar produto</string>
    <string name="invoice_order">Finalizar o Pedido</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="r_0_00">R$ 0.00</string>
    <string name="product_image">Product image</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="update_product">Atualizar produto</string>
    <string name="delete_product">Remover produto</string>
    <string name="delete">Remover</string>
    <string name="return_to_tables">Voltar</string>
    <string name="subtotal">Subtotal R$</string>
    <string name="total">Total R$</string>
    <string name="invoice_tip">Pagar com gorjeta</string>
    <string name="invoice_no_tip">Pagar sem gorjeta</string>
    <string name="order_list">Listagem de pedidos</string>
</resources>