<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="3dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/table_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/table_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/adapter_recycler_invoice_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/order_subtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/subtotal"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Gorjeta 10% (Opcional)"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/order_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/total"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/invoice_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_tip"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/invoice_no_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_no_tip"
            android:layout_margin="1dp"/>

    </LinearLayout>

</LinearLayout>