<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.ServiceActivity"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tableNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/table_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_product"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_items_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_subtotal"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/r_0_00"/>

            <Button
                android:id="@+id/invoiceOrder"
                android:layout_gravity="end"
                android:layout_marginStart="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_order"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>